--- a/stylesheetfood.css
+++ b/stylesheetfood.css
@@ -245,7 +245,6 @@ img {
 
 .bottle_container {
     display: flex;
-
     align-items: center;
     background-color: #f6f6f6;
     width: 80%;
@@ -297,7 +296,6 @@ img {
 /*pink_store*/
 .bottle_container_store {
     display: flex;
-
     align-items: center;
     width: 80%;
     height: 71px;
@@ -354,47 +352,49 @@ img {
     cursor: pointer;
 }
 
-.comment_rest {
-    padding-left: 17px;
-    cursor: pointer;
-}
 /*animation-coeur-icon*/
 .heart-lite {
     font-size: 27px;
     cursor: pointer;
-    width: 6%;
-    position: absolute;
+    width: 10%;
+    position: relative;
     display: block;
     opacity: 1;
-
-    transition: 1s;
-    left: 65%;
+    transition: 500ms;
+    display: inline-block;
 }
 
 .heart-purple {
-    font-size: 27px;
+    position: relative;
+    font-size: 23px;
     cursor: pointer;
-    width: 6%;
-    position: absolute;
-    transition: 1s;
+    width: 10%;
+    transition: 500ms;
     opacity: 0;
     z-index: 1;
-    transform: scale(1);
     background: linear-gradient(#ff79da, #9356dc);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    left: 65%;
+    left: 74px;
+    display: inline-block;
 }
 .heart-purple:hover {
-    font-size: 27px;
+    position: relative;
+    font-size: 22px;
     cursor: pointer;
-    width: 6%;
+    width: 10%;
     transform: scale(1);
-    transition: 1s;
+    transition: 500ms;
     opacity: 1;
-    z-index: 2;
+    z-index: 1;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    left: 74px;
+    display: inline-block;
+}
+
+.comment_title {
+    width: 164px;
 }
 
 .content_fig {
@@ -462,6 +462,7 @@ figcaption {
     align-items: center;
     justify-content: space-between;
     width: 307px;
+    cursor: pointer;
 }
 .city_fig {
     padding-left: 10px;
