--- a/enchanted-stylesheet.css
+++ b/enchanted-stylesheet.css
@@ -102,7 +102,7 @@ body {
 
 .menu_title h1 {
     font-family: "shrikhandregular";
-    font-size: 30px;
+    font-size: 27px;
     font-weight: lighter;
     width: 79%;
 }
@@ -110,39 +110,46 @@ body {
 .heart-lite {
     font-size: 27px;
     cursor: pointer;
-    width: 6%;
+    width: 9%;
     position: absolute;
-    display: block;
+
     opacity: 1;
     z-index: 1;
-    transition: 1s;
-    left: 80%;
+    transition: 400ms;
+    left: 82%;
+    top: 21px;
+    display: inline-flex;
+    justify-content: center;
 }
 
 .heart-purple {
     font-size: 27px;
     cursor: pointer;
-    width: 6%;
+    width: 9%;
     position: absolute;
-    transition: 1s;
+    transition: 400ms;
     opacity: 0;
     z-index: 2;
     transform: scale(1);
     background: linear-gradient(#ff79da, #9356dc);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    left: 80%;
+    left: 82%;
+    top: 21px;
+    display: inline-flex;
+    justify-content: center;
 }
 .heart-purple:hover {
     font-size: 27px;
     cursor: pointer;
-    width: 6%;
+    width: 9%;
     transform: scale(1);
-    transition: 1s;
+    transition: 400ms;
     opacity: 1;
     z-index: 2;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    top: 21px;
 }
 
 .under_title {
@@ -162,13 +169,13 @@ body {
 /*bloc_entrance_menu*/
 .bloc_entrance {
     width: 90%;
-    height: 300px;
+    height: 370px;
     display: flex;
     flex-direction: column;
     margin: auto;
     justify-content: space-around;
     align-items: center;
-    margin-top: -21px;
+    margin-top: -40px;
 }
 .fa-check {
     border-radius: 50%;
@@ -239,6 +246,20 @@ body {
 .content_entrance3:hover .fa-check {
     transform: rotate(360deg);
 }
+
+.content_entrance4:hover .price__entrance {
+    transform: translateX(0px);
+    transition: 1s;
+}
+.content_entrance4:hover .anim-content_entrance {
+    transform: translateX(0px);
+    transition-duration: 600ms;
+}
+
+.content_entrance4:hover .fa-check {
+    transform: rotate(360deg);
+}
+
 /* animation-text-overflow */
 .content_entrance1:hover .content__dish {
     width: 200px;
@@ -255,6 +276,13 @@ body {
     transition: width 1s;
 }
 .content_entrance3:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
+.content_entrance4:hover .content__dish {
     width: 200px;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -332,8 +360,27 @@ body {
     cursor: pointer;
     overflow: hidden;
     animation: opacity3-menu cubic-bezier(0.47, 0.73, 0.25, 1) 2s;
-
     transition: ease;
+}
+.content_entrance4 {
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    border-radius: 20px;
+    display: inline-flex;
+    flex-direction: column;
+    align-content: flex-start;
+    line-height: 0px;
+    box-shadow: 0px 9px 16px 0px lightgray;
+    padding-left: 15px;
+    transform: translateY(19px);
+    position: relative;
+    flex-wrap: wrap;
+    cursor: pointer;
+    overflow: hidden;
+    animation: opacity4-menu cubic-bezier(0.47, 0.73, 0.25, 1) 2s;
+    transition: ease;
+    top: 13px;
 }
 
 /* animation-menu */
@@ -396,6 +443,26 @@ body {
         transform: translateY(19px);
     }
 }
+
+@keyframes opacity4-menu {
+    0% {
+        opacity: 0;
+        transform: translateY(40px);
+        transition-delay: 900ms;
+    }
+    50% {
+        opacity: 0;
+    }
+    75% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(19px);
+    }
+}
+
 .content__dish {
     width: 277px;
     height: 33px;
@@ -431,6 +498,13 @@ body {
     white-space: nowrap;
     transition: width 1s;
 }
+.content_plate:hover .content__dish {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 1s;
+}
 
 .content_entrance1 h4 {
     width: 300px;
@@ -449,6 +523,13 @@ body {
 }
 
 .content_entrance3 h4 {
+    width: 300px;
+    height: 8px;
+    display: flex;
+    justify-content: flex-start;
+    margin: 19px 0px 0px;
+}
+.content_entrance4 h4 {
     width: 300px;
     height: 8px;
     display: flex;
