--- a/menu-stylesheet.css
+++ b/menu-stylesheet.css
@@ -112,12 +112,13 @@ body {
     cursor: pointer;
     width: 9%;
     position: absolute;
-    display: block;
+    display: inline-flex;
     opacity: 1;
     z-index: 1;
     transition: 400ms;
-    left: 80%;
-    top: 21px;
+    left: 83%;
+    top: 25px;
+    justify-content: center;
 }
 
 .heart-purple {
@@ -132,8 +133,10 @@ body {
     background: linear-gradient(#ff79da, #9356dc);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    left: 80%;
-    top: 21px;
+    left: 83%;
+    top: 25px;
+    justify-content: center;
+    display: inline-flex;
 }
 .heart-purple:hover {
     font-size: 27px;
@@ -276,7 +279,7 @@ body {
     flex-wrap: wrap;
     cursor: pointer;
     overflow: hidden;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-menu;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-menu;
 }
 .content_entrance2 {
     width: 100%;
@@ -294,7 +297,7 @@ body {
     flex-wrap: wrap;
     cursor: pointer;
     overflow: hidden;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-menu;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-menu;
 }
 .content_entrance3 {
     width: 100%;
@@ -481,7 +484,7 @@ body {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-plate;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-plate;
     animation-duration: 1s;
     transform: translateY(-6px);
     transition: ease;
@@ -501,7 +504,7 @@ body {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-plate;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-plate;
     transform: translateY(10px);
     transition: ease;
     position: relative;
@@ -693,7 +696,7 @@ body {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-dessert;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-dessert;
     transform: translateY(-10px);
     position: relative;
     flex-wrap: wrap;
@@ -771,7 +774,7 @@ body {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-dessert;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-dessert;
     transform: translateY(6px);
     position: relative;
     flex-wrap: wrap;
