--- a/gust-stylesheet.css
+++ b/gust-stylesheet.css
@@ -40,6 +40,12 @@ body {
 .bloc_page {
     width: 100%;
 }
+a:link {
+    color: black;
+}
+a:visited {
+    color: black;
+}
 
 .pic_french {
     object-fit: cover;
@@ -110,21 +116,19 @@ body {
 .heart-lite {
     font-size: 27px;
     cursor: pointer;
-    width: 9%;
-    position: absolute;
-    display: block;
+    position: relative;
     opacity: 1;
     z-index: 1;
     transition: 400ms;
-    left: 80%;
-    top: 21px;
+    display: inline-flex;
+    justify-content: center;
+    left: 4px;
 }
 
 .heart-purple {
     font-size: 27px;
     cursor: pointer;
-    width: 9%;
-    position: absolute;
+    position: relative;
     transition: 400ms;
     opacity: 0;
     z-index: 2;
@@ -132,20 +136,20 @@ body {
     background: linear-gradient(#ff79da, #9356dc);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    left: 80%;
-    top: 21px;
+    display: inline-flex;
+    justify-content: center;
+    left: 31px;
 }
 .heart-purple:hover {
     font-size: 27px;
     cursor: pointer;
-    width: 9%;
     transform: scale(1);
     transition: 400ms;
     opacity: 1;
     z-index: 2;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    top: 21px;
+}
 }
 
 .under_title {
