--- a/stylesheetfood.css
+++ b/stylesheetfood.css
@@ -22,6 +22,13 @@
     font-style: normal;
 }
 
+a:link {
+    color: black;
+}
+a:visited {
+    color: black;
+}
+
 body {
     font-family: "robotoregular";
     font-style: normal;
@@ -395,6 +402,7 @@ img {
 
 .comment_title {
     width: 164px;
+    display: inline-block;
 }
 
 .content_fig {
@@ -468,6 +476,7 @@ figcaption {
     padding-left: 10px;
     margin-top: -10px;
     opacity: 0.6;
+    display: inline-block;
 }
 /*footer_container */
 .fooding_footer {
