--- a/enchanted-stylesheet.css
+++ b/enchanted-stylesheet.css
@@ -40,6 +40,12 @@ body {
 .bloc_page {
     width: 100%;
 }
+a:link {
+    color: black;
+}
+a:visited {
+    color: black;
+}
 
 .pic_french {
     object-fit: cover;
@@ -110,46 +116,36 @@ body {
 .heart-lite {
     font-size: 27px;
     cursor: pointer;
-    width: 9%;
-    position: absolute;
-
+    width: 10%;
+    position: relative;
     opacity: 1;
-    z-index: 1;
     transition: 400ms;
-    left: 82%;
-    top: 21px;
-    display: inline-flex;
-    justify-content: center;
+    display: inline-block;
 }
 
 .heart-purple {
-    font-size: 27px;
+    position: relative;
+    font-size: 22px;
     cursor: pointer;
-    width: 9%;
-    position: absolute;
+    width: 10%;
     transition: 400ms;
     opacity: 0;
-    z-index: 2;
-    transform: scale(1);
+    z-index: 1;
     background: linear-gradient(#ff79da, #9356dc);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    left: 82%;
-    top: 21px;
-    display: inline-flex;
-    justify-content: center;
+    left: 39px;
+    display: inline-block;
 }
 .heart-purple:hover {
-    font-size: 27px;
+    font-size: 22px;
     cursor: pointer;
-    width: 9%;
     transform: scale(1);
     transition: 400ms;
     opacity: 1;
     z-index: 2;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    top: 21px;
 }
 
 .under_title {
