--- a/enchanted-stylesheet.css
+++ b/enchanted-stylesheet.css
@@ -1046,6 +1046,10 @@ ul li {
     align-items: center;
     justify-content: space-between;
 }
+a:link {
+    display: contents;
+    color: white;
+}
 .proposition {
     margin-left: 14px;
 }
