--- a/menu-stylesheet.css
+++ b/menu-stylesheet.css
@@ -972,6 +972,10 @@ ul li {
     align-items: center;
     justify-content: space-between;
 }
+a:link {
+    display: contents;
+    color: white;
+}
 .proposition {
     margin-left: 14px;
 }
