--- a/enchanted-stylesheet.css
+++ b/enchanted-stylesheet.css
@@ -39,12 +39,7 @@ body {
 
 .bloc_page {
     width: 100%;
-}
-a:link {
-    color: black;
-}
-a:visited {
-    color: black;
+    max-height: 100%;
 }
 
 .pic_french {
@@ -53,12 +48,19 @@ a:visited {
 }
 
 /*header*/
+a:link {
+    color: black;
+}
+a:visited {
+    color: black;
+}
 
 .icon__back {
     display: flex;
     font-size: 24px;
     width: 7%;
     cursor: pointer;
+    color: black;
 }
 .container_title_bloc {
     width: 90%;
@@ -319,7 +321,7 @@ a:visited {
     flex-wrap: wrap;
     cursor: pointer;
     overflow: hidden;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-menu;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-menu;
 }
 .content_entrance2 {
     width: 100%;
@@ -337,7 +339,7 @@ a:visited {
     flex-wrap: wrap;
     cursor: pointer;
     overflow: hidden;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-menu;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-menu;
 }
 .content_entrance3 {
     width: 100%;
@@ -556,7 +558,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-plate;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-plate;
     animation-duration: 1s;
     transform: translateY(-6px);
     transition: ease;
@@ -576,7 +578,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-plate;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-plate;
 
     transform: translateY(10px);
     transition: ease;
@@ -769,7 +771,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-dessert;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-dessert;
     transform: translateY(-10px);
     position: relative;
     flex-wrap: wrap;
@@ -824,7 +826,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-dessert;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-dessert;
     transform: translateY(6px);
     position: relative;
     flex-wrap: wrap;
@@ -1046,9 +1048,11 @@ ul li {
     align-items: center;
     justify-content: space-between;
 }
-a:link {
+.food__contact:link {
     display: contents;
     color: white;
+    text-decoration: none;
+    line-height: 2;
 }
 .proposition {
     margin-left: 14px;
