--- a/gust-stylesheet.css
+++ b/gust-stylesheet.css
@@ -40,6 +40,7 @@ body {
 .bloc_page {
     width: 100%;
 }
+
 a:link {
     color: black;
 }
@@ -301,7 +302,7 @@ a:visited {
     flex-wrap: wrap;
     cursor: pointer;
     overflow: hidden;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-menu;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-menu;
 }
 .content_entrance2 {
     width: 100%;
@@ -319,7 +320,7 @@ a:visited {
     flex-wrap: wrap;
     cursor: pointer;
     overflow: hidden;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-menu;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-menu;
 }
 .content_entrance3 {
     width: 100%;
@@ -495,7 +496,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 10px;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-plate;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-plate;
     animation-duration: 1s;
     transform: translateY(-6px);
     transition: ease;
@@ -515,7 +516,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 10px;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-plate;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-plate;
     transform: translateY(10px);
     transition: ease;
     position: relative;
@@ -707,7 +708,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity1-dessert;
+    animation: 1000ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity1-dessert;
     transform: translateY(-10px);
     position: relative;
     flex-wrap: wrap;
@@ -762,7 +763,7 @@ a:visited {
     line-height: 0px;
     box-shadow: 0px 9px 16px 0px lightgray;
     padding-left: 15px;
-    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) 0ms 1 normal none running opacity2-dessert;
+    animation: 1500ms cubic-bezier(0.47, 0.73, 0.25, 1) opacity2-dessert;
     transform: translateY(6px);
 
     position: relative;
@@ -985,9 +986,10 @@ ul li {
     align-items: center;
     justify-content: space-between;
 }
-a:link {
+.food__contact:link {
     display: contents;
     color: white;
+    text-decoration: none;
 }
 .proposition {
     margin-left: 14px;
