--- a/stylesheetfood.css
+++ b/stylesheetfood.css
@@ -4,8 +4,7 @@
     font-family: "robotoregular";
     src: url("roboto-regular-webfont.eot");
     src: url("roboto-regular-webfont.eot?#iefix") format("embedded-opentype"),
-        url("roboto-regular-webfont.woff2") format("woff2"), url("roboto-regular-webfont.woff") format("woff"),
-        url("roboto-regular-webfont.ttf") format("truetype"),
+        url("roboto-regular-webfont.woff") format("woff"), url("roboto-regular-webfont.ttf") format("truetype"),
         url("roboto-regular-webfont.svg#robotoregular") format("svg");
     font-weight: normal;
     font-style: normal;
@@ -13,11 +12,12 @@
 
 @font-face {
     font-family: "shrikhandregular";
-    src: url("shrikhand-regular-webfont.eot");
-    src: url("shrikhand-regular-webfont.eot?#iefix") format("embedded-opentype"),
-        url("shrikhand-regular-webfont.woff2") format("woff2"), url("shrikhand-regular-webfont.woff") format("woff"),
-        url("shrikhand-regular-webfont.ttf") format("truetype"),
-        url("shrikhand-regular-webfont.svg#shrikhandregular") format("svg");
+    src: url("/police/shrikhand-regular-webfont.eot");
+    src: url("/police/shrikhand-regular-webfont.eot?#iefix") format("embedded-opentype"),
+        url("/police/shrikhand-regular-webfont.woff2") format("woff2"),
+        url("shrikhand-regular-webfont.woff") format("woff"),
+        url("/police/shrikhand-regular-webfont.ttf") format("truetype"),
+        url("/police/shrikhand-regular-webfont.svg#shrikhandregular") format("svg");
     font-weight: normal;
     font-style: normal;
 }
@@ -510,9 +510,10 @@ ul li {
     justify-content: space-between;
 }
 
-a:link {
+.food__contact:link {
     display: contents;
     color: white;
+    text-decoration: none;
 }
 .proposition {
     margin-left: 14px;
